# MacPack

./: .gitignore  CHANGELOG  LICENSE  README.md  main.c
runtime/: Cargo.toml
runtime/gui/SomeApp.mpb/: app.json
runtime/gui/gui/: ContentView.swift  Info.plist  guiApp.swift
runtime/gui/gui.xcodeproj/: project.pbxproj
runtime/gui/gui.xcodeproj/project.xcworkspace/xcuserdata/farrokharasteh.xcuserdatad/: UserInterfaceState.xcuserstate
runtime/gui/gui.xcodeproj/xcuserdata/farrokharasteh.xcuserdatad/xcschemes/: xcschememanagement.plist
runtime/gui/gui/Assets.xcassets/AppIcon.appiconset/: Contents.json
runtime/src/: main.rs
test/: macpack.toml
