[package]
name = "macpack-runtime"
version = "0.1.0"
edition = "2024"
description = "Runtime for MacPack, a format for macOS applications."
license = "BSD 3-Clause"
authors = ["Maclication", "the contributors"]

[[bin]]
path = "src/main.rs"
name = "macpack"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.21.0"
toml = "0.9.5"
zip = "5.0.0"
